--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>KTDBlog</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+    <%= javascript_include_tag "/assets/application.js", "data-turbo-track": "reload", defer: true %>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
-
   <body>
     <%= yield %>
   </body>
